@@ -6,6 +6,7 @@ Add document-links in result element for 2.03
 Minor css fixes to accomodate savi changes
 Update Print-friendly css
 Update link support for result reference vocab
+Translate vocab numbers to standard descriptions from Registry
 
 
 Development Portal (2018-02-27 shi)
